--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -3,10 +3,27 @@
 @tailwind utilities;
 
 #app {
-  font-family: Avenir, Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-align: center;
-  color: #2c3e50;
-  margin-top: 60px;
+  max-width: 900px;
+  @apply
+    py-2
+    px-6
+    mx-auto
+    mt-1;
+}
+
+h1 {
+  @apply font-bold text-4xl;
+}
+
+main {
+  @apply py-2 px-2;
+}
+
+.link {
+  @apply text-blue-500;
+}
+
+.link:hover, .link:focus {
+  border-bottom: solid 1.75px;
+  @apply border-blue-500;
 }
