--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Permanent Marker";
+  src: url("./PermanentMarker-Regular.ttf");
+}
+
 #app {
   max-width: 900px;
   @apply
@@ -12,7 +17,15 @@
 }
 
 h1 {
-  @apply font-bold text-4xl;
+  @apply font-bold text-3xl mb-3;
+}
+
+h2 {
+  @apply font-bold text-2xl mb-3;
+}
+
+h3 {
+  @apply font-bold text-xl mb-3;
 }
 
 main {
