--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -17,15 +17,15 @@
 }
 
 h1 {
-  @apply font-bold text-3xl mb-3;
+  @apply font-bold text-3xl my-3;
 }
 
 h2 {
-  @apply font-bold text-2xl mb-3;
+  @apply font-bold text-2xl my-3;
 }
 
 h3 {
-  @apply font-bold text-xl mb-3;
+  @apply font-bold text-xl my-3;
 }
 
 main {
