--- a/styles/index.css
+++ b/styles/index.css
@@ -4,14 +4,8 @@
 @tailwind components;
 /* Stop purging. */
 
-html,
 body {
-  @apply bg-gray-50 dark:bg-gray-900;
-}
-
-/* Write your own custom component styles here */
-.btn-blue {
-  @apply px-4 py-2 font-bold text-white bg-blue-500 rounded;
+  @apply bg-gray-50;
 }
 
 /* Start purging... */
